Fix: "Local collection" text label is truncated with large font

- Correctly calculate the size of an item.
- Use the styles pixel metrics

BUG: 282561
FIXED-IN: 2.8