src/SvgHandler.h
@@ -80,7 +80,7 @@ class AMAROK_EXPORT SvgHandler : public QObject
          * Take an album and extract the pixmap for sending to addBordersToPixmap.
          *
          * @param album The AlbumPtr
-         * @param size Some size or another
+         * @param size The size of the resulting image (border included)
          * @borderWidth The desired width of the border
          */
         QPixmap imageWithBorder( Meta::AlbumPtr album, int size = 1, int borderWidth = 5 );
